# astery_engine_tools

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: pr-guard.yml  release-installer.yml  release.yml
cmd/engine-toold/: main.go  main_test.go
docs/: AUTO_UPDATE_SETUP.md  RELEASE.md
internal/auth/: hash.go  keystore.go  pairing.go  source.go
internal/executors/clipvideo/: encoder.go  executor.go  ffmpeg_args.go
internal/executors/extractaudio/: executor.go  executor_test.go  ffmpeg_args.go
internal/ipc/: handlers_jobs.go  handlers_logs.go  handlers_pair.go  handlers_unpair.go  handlers_unpair_test.go  server.go  server_test.go
internal/jobqueue/: recovery.go  recovery_test.go  schema.sql  store.go  store_test.go
internal/observability/: slog.go  slog_test.go  sse.go  sse_test.go
internal/runtime/: daemon.go  jobhandle.go  scheduler.go
internal/runtime/registry/: registry.go
internal/runtime/resources/: manager.go
internal/storage/: paths.go
internal/sync/: client.go  lease.go
internal/tools/: manager.go
internal/upload/: client.go
scripts/release/: build-manifest.mjs  verify-release.mjs
scripts/release/fixtures/: release-fixture.json  release-manifest.example.json
tauri-app/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
tauri-app/src/: App.tsx  main.tsx  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/binaries/: .gitkeep
tauri-app/src-tauri/src/: daemon.rs  lib.rs  main.rs
tauri-app/src/components/: Badge.tsx  Button.tsx  Card.tsx  Spinner.tsx
tauri-app/src/lib/: ipc.test.ts  ipc.ts  types.ts  updater.ts
tauri-app/src/pages/: Dashboard.tsx  Logs.tsx  Pairing.test.tsx  Pairing.tsx
