[package]
name = "astery-engine-tools-ui"
version = "0.2.0-dev"
description = "Astery Engine Tools desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "astery_engine_tools_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "astery-engine-tools-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1"
sysinfo = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
